changed workshop registration link

--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@
                 <td>1</td>
                 <td rowspan="4">10:00 AM - 6:00 PM</td>
                 <td><a href="https://elearning.industriallogic.com/gh/submit?Action=AlbumContentsAction&album=designPatternsBoxSet&devLanguage=Java" target="_blank">Refactoring to Patterns</a> by Joshua Kerievsky</td>
-                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-56-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
+                <td><a href="http://booking.agilefaqs.com/agile-pune-2014#workshop-56-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td><a href="http://agilefaqs.com/services/training/crafting-out-mvps" target="_blank">Crafting out MVPs</a> by <a href="http://nareshjain.com/about" target="_blank">Naresh Jain</a></td>
-                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-57-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
+                <td><a href="http://booking.agilefaqs.com/agile-pune-2014#workshop-57-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
                 <td>3</td>
                 <td><a href="http://www.fearlesschangepatterns.com/" target="_blank">Fearless Change: Patterns for Introducing New Ideas</a> by <a href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
-                <td><a href="http://booking.agilefaqs.com/selenium-conf-2014#workshop-58-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
+                <td><a href="http://booking.agilefaqs.com/agile-pune-2014#workshop-58-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             </tbody>
         </table>
