visa for 12 countries

--- a/index.html
+++ b/index.html
@@ -378,25 +378,25 @@
                 </tr>
                 <tr>
                     <td>3. Smart</td>
-                    <td>Aug 1st</td>
+                    <td>Oct 1st</td>
                     <td>100</td>
                     <td>7,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>4. Regular</td>
-                    <td>Sep 1st</td>
+                    <td>Oct 15th</td>
                     <td>100</td>
                     <td>9,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>5. Late</td>
-                    <td>Oct 1st</td>
+                    <td>Nov 1st</td>
                     <td>75</td>
                     <td>12,000 Rs.</td>
                 </tr>
                 <tr>
                     <td>6. Last Minute</td>
-                    <td>Nov 1st</td>
+                    <td>Nov 15th</td>
                     <td>50</td>
                     <td>15,000 Rs.</td>
                 </tr>
@@ -623,7 +623,7 @@
             <h3>VISA for Entering India</h3>
             <a name="visa"></a>
             <p>We recommend all <b>foreign delegates </b>(speakers &amp; participants) apply for a <span style="text-decoration: underline;"><b><i>tourist visa</i></b></span>. This is the safest, cheapest and most hassle-free visa. All you need is your confirmed flight tickets and hotel confirmation to apply for this visa.</p>
-            <p>Current citizens of Cambodia, Finland, Japan, Laos, Luxembourg, Myanmar, New Zealand, Philippines, Singapore, and Vietnam can get a "Tourist Visa On Arrival". Its valid for 30 days, for single entry and is available only at the international airports at Delhi, Mumbai, Chennai, Bangalore and Kolkata. Citizens from other countries are required to apply for the visa before hand. Give at least 3 weeks for the visa process. Some agencies that can help you</p>
+            <p>Current citizens of Twelve countries - Japan, Singapore, Philippines, Finland, Luxembourg, New Zealand, Cambodia, Laos, Vietnam, Myanmar, Indonesia and Republic of Korea can get a "Tourist Visa On Arrival". Its valid for 30 days, for single entry and is available only at the international airports at Delhi, Mumbai, Chennai, Bangalore and Kolkata. Citizens from other countries are required to apply for the visa before hand. Give at least 3 weeks for the visa process. Some agencies that can help you:</p>
 
             <ul>
                 <li>US - <a href="http://www.traveldocs.com/index.php?page=india">http://www.traveldocs.com/index.php?page=india</a></li>
