updated schedule and speaker name color

--- a/index.html
+++ b/index.html
@@ -204,9 +204,12 @@
             </tr>
             <tr>
                 <td>10:30-11:15 AM</td>
-                <td>Expert Talk 1</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/406/agility-at-scale-platform-versus-product-concerns" target="_blank">Agility at Scale - Platform versus Product Concerns</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/howard-deiner" target="_blank">Howard Deiner</a>
+                </td>
                 <td>Demo Session 1</td>
-                <td>Mini-Workshop 1</td>
+                <td><a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a><br><a class="speaker-name" href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
             </tr>
             <tr>
                 <td>11:15-11:30 AM</td>
@@ -214,9 +217,17 @@
             </tr>
             <tr>
                 <td>11:30-12:15 PM</td>
-                <td>Expert Talk 2</td>
-                <td>Case Study 1</td>
-                <td>Mini-Workshop 1...</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/487/understanding-agility-through-natural-selection" target="_blank">Understanding Agility through “Natural Selection”</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/nadeem-ulla-khan" target="_blank">Nadeem Ulla Khan</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/493/skype-goes-agile-dont-repeat-our-mistakes" target="_blank">Skype goes agile: don't repeat our mistakes</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/alexey-ilyichev" target="_blank">Alexey Ilyichev</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a>
+                    <br><a class="speaker-name" href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
             </tr>
             <tr>
                 <td>12:15-01:30 PM</td>
@@ -224,9 +235,16 @@
             </tr>
             <tr>
                 <td>01:30-02:15 PM</td>
-                <td>Expert Talk 3</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/483/to-deploy-or-not-to-deploy-decide-using-ttas-trend-failure-analysis" target="_blank">To Deploy or Not-to-Deploy - decide using TTA's Trend & Failure Analysis</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/anand-bagmar" target="_blank">Anand Bagmar</a>
+                </td>
                 <td>Experience Report 1 &amp; 2</td>
-                <td>Mini-Workshop 2</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/dhaval-dalal" target="_blank">Dhaval Dalal</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                </td>
             </tr>
             <tr>
                 <td>02:15-02:30 PM</td>
@@ -234,9 +252,18 @@
             </tr>
             <tr>
                 <td>02:30-03:15 PM</td>
-                <td>Expert Talk 4</td>
-                <td>Case Study 2</td>
-                <td>Mini-Workshop 2...</td>
+                <td>
+                    Expert Talk
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/397/enterprise-agile-adoption-an-organizational-change-management-journey" target="_blank">Enterprise Agile Adoption: An Organizational Change Management Journey</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/zaheerabbas-contractor" target="_blank">Zaheerabbas Contractor</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/dhaval-dalal" target="_blank">Dhaval Dalal</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                </td>
             </tr>
             <tr>
                 <td>03:15-03:30 PM</td>
@@ -244,8 +271,18 @@
             </tr>
             <tr>
                 <td>03:30-04:15 PM</td>
-                <td>Expert Talk 5</td>
-                <td>Experience Report 3 &amp; 4</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/471/inverting-test-pyramid-a-first-hand-experience-report" target="_blank">Inverting Test Pyramid - A First Hand Experience Report</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/sachin-natu" target="_blank">Sachin Natu</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/442/getting-a-partner-to-adopt-agile" target="_blank">Getting A Partner To Adopt Agile</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/sunil-mundra" target="_blank">Sunil Mundra</a>
+                    <hr>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/402/continuous-delivery-in-enterprise-devops-and-other-challenges" target="_blank">Continuous delivery in enterprise - devOps and other challenges</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/anirudh-bhatnagar-1" target="_blank">Anirudh Bhatnagar</a>
+                </td>
                 <td>Lightning Talks</td>
             </tr>
             <tr>
@@ -275,7 +312,7 @@
 
             <tr>
                 <td>09:00-10:00 AM</td>
-                <td colspan="3">Keynote by Linda Rising</td>
+                <td colspan="3">Keynote - <a href="http://confengine.com/agile-pune-2014/proposal/694/science-or-stories" target="_blank">Science or Stories?</a> by Linda Rising</td>
             </tr>
             <tr>
                 <td>10:00-10:10 AM</td>
@@ -287,7 +324,11 @@
             </tr>
             <tr>
                 <td>10:30-11:15 AM</td>
-                <td>Expert Talk 6</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/458/techniques-to-speed-up-your-build-pipeline-for-faster-feedback" target="_blank">Techniques to Speed Up your Build Pipeline for Faster Feedback</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/ashish-parkhi" target="_blank">Ashish Parkhi</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                </td>
                 <td>Demo Session 2</td>
                 <td>Mini-Workshop 3</td>
             </tr>
@@ -297,8 +338,14 @@
             </tr>
             <tr>
                 <td>11:30-12:15 PM</td>
-                <td>Expert Talk 7</td>
-                <td>Case Study 3</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/521/architectural-hiccups-and-you-really-shouldnt-bother-with-sprint-0" target="_blank">Architectural hiccups (and you really shouldn't bother with sprint-0)</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/403/application-security-the-agile-way" target="_blank">Application Security - The Agile Way</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/shirish-padalkar" target="_blank">Shirish Padalkar</a>
+                </td>
                 <td>Mini-Workshop 3...</td>
             </tr>
             <tr>
@@ -318,7 +365,11 @@
             <tr>
                 <td>02:30-03:15 PM</td>
                 <td>Expert Talk 9</td>
-                <td>Case Study 4</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/535/extreme-programming-for-etl-and-data-analytics" target="_blank">eXtreme Programming for ETL and Data Analytics</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/prafulla-girgaonkar-2" target="_blank">Prafulla Girgaonkar</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                </td>
                 <td>Mini-Workshop 4...</td>
             </tr>
             <tr>
