removed Steve and added Julian

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                 </div>
                 <div class="4u">
                     <article class="item">
-                        <a href="http://www.higherorderlogic.com/about/" target="_blank" class="image avatar150"><img src="images/speakers/SteveFreeman.png" alt="Steve Freeman" title="Steve Freeman" /></a>
+                        <a href="https://www.linkedin.com/pub/julian-harty/13/104/5a0" target="_blank" class="image avatar150"><img src="images/speakers/JulianHarty.png" alt="Julian Harty" title="Julian Harty" /></a>
                         <header>
-                            <h3><a href="http://www.higherorderlogic.com/about/" target="_blank">Steve Freeman</a></h3>
+                            <h3><a href="https://www.linkedin.com/pub/julian-harty/13/104/5a0" target="_blank">Julian Harty</a></h3>
                         </header>
                     </article>
                 </div>
@@ -208,8 +208,14 @@
                     <a href="http://confengine.com/agile-pune-2014/proposal/406/agility-at-scale-platform-versus-product-concerns" target="_blank">Agility at Scale - Platform versus Product Concerns</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/howard-deiner" target="_blank">Howard Deiner</a>
                 </td>
-                <td>Demo Session 1</td>
-                <td><a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a><br><a class="speaker-name" href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/685/applying-gamification-techniques-in-agile" target="_blank">Applying Gamification Techniques in Agile</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/archana-joshi" target="_blank">Archana Joshi</a>
+                </td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a>
+                    <br><a class="speaker-name" href="http://www.lindarising.org/" target="_blank">Linda Rising</a>
+                </td>
             </tr>
             <tr>
                 <td>11:15-11:30 AM</td>
@@ -226,7 +232,7 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/alexey-ilyichev" target="_blank">Alexey Ilyichev</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection...</a>
                     <br><a class="speaker-name" href="http://www.lindarising.org/" target="_blank">Linda Rising</a></td>
             </tr>
             <tr>
@@ -260,7 +266,7 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/zaheerabbas-contractor" target="_blank">Zaheerabbas Contractor</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation...</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/dhaval-dalal" target="_blank">Dhaval Dalal</a>
                     <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
                 </td>
@@ -291,7 +297,7 @@
             </tr>
             <tr>
                 <td>04:30-05:30 PM</td>
-                <td colspan="3">Keynote by Steve Freeman</td>
+                <td colspan="3">Keynote by Julian Harty</td>
             </tr>
             <tr>
                 <td>05:30-05:45 PM</td>
@@ -330,7 +336,7 @@
                     <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
                 </td>
                 <td>Demo Session 2</td>
-                <td>Mini-Workshop 3</td>
+                <td>Workshop by Julian Harty</td>
             </tr>
             <tr>
                 <td>11:15-11:30 AM</td>
@@ -343,10 +349,10 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/403/application-security-the-agile-way" target="_blank">Application Security - The Agile Way</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/shirish-padalkar" target="_blank">Shirish Padalkar</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/720/taming-the-dragon" target="_blank">Taming the Dragon</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/karthik-kamal-balasubramaniam" target="_blank">Karthik Kamal Balasubramaniam</a>
                 </td>
-                <td>Mini-Workshop 3...</td>
+                <td>Workshop by Julian Harty...</td>
             </tr>
             <tr>
                 <td>12:15-01:30 PM</td>
@@ -355,8 +361,11 @@
             <tr>
                 <td>01:30-02:15 PM</td>
                 <td>Expert Talk 8</td>
-                <td>Experience Report 5 &amp; 6</td>
-                <td>Mini-Workshop 4</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/403/application-security-the-agile-way" target="_blank">Application Security - The Agile Way</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/shirish-padalkar" target="_blank">Shirish Padalkar</a>
+                </td>
+                <td>Workshop by Joshua Kerievsky</td>
             </tr>
             <tr>
                 <td>02:15-02:30 PM</td>
@@ -370,7 +379,7 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/prafulla-girgaonkar-2" target="_blank">Prafulla Girgaonkar</a>
                     <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
                 </td>
-                <td>Mini-Workshop 4...</td>
+                <td>Workshop by Joshua Kerievsky...</td>
             </tr>
             <tr>
                 <td>03:15-03:30 PM</td>
