added Senthilkumar Rajamarthandan's name

--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
             <tbody>
             <tr>
                 <td>1</td>
-                <td rowspan="4">10:00 AM - 6:00 PM</td>
+                <td rowspan="4">Nov 19th &amp; 20th<br>10:00 AM - 6:00 PM</td>
                 <td><a href="https://elearning.industriallogic.com/gh/submit?Action=AlbumContentsAction&album=designPatternsBoxSet&devLanguage=Java" target="_blank">Refactoring to Patterns</a> by Joshua Kerievsky</td>
                 <td><a href="http://booking.agilefaqs.com/agile-pune-2014#workshop-59-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
                 <td>2</td>
-                <td><a href="http://agilefaqs.com/services/training/crafting-out-mvps" target="_blank">Crafting out MVPs</a> by <a href="http://nareshjain.com/about" target="_blank">Naresh Jain</a></td>
+                <td><a href="http://agilefaqs.com/services/training/product-discovery" target="_blank">Collaborative Product Discovery</a> by <a href="http://nareshjain.com/about" target="_blank">Naresh Jain</a></td>
                 <td><a href="http://booking.agilefaqs.com/agile-pune-2014#workshop-57-info" target="_blank"><span class="button  scrolly" style="padding: 10px;text-align: center; background-color: #E27689">Register</span></a></td>
             </tr>
             <tr>
@@ -211,6 +211,7 @@
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/685/applying-gamification-techniques-in-agile" target="_blank">Applying Gamification Techniques in Agile</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/archana-joshi" target="_blank">Archana Joshi</a>
+                    <br><a href="http://confengine.com/user/senthilkumar-rajamarthandan" target="_blank" style="font-size: 0.75em">Senthilkumar R</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a>
@@ -259,7 +260,8 @@
             <tr>
                 <td>02:30-03:15 PM</td>
                 <td>
-                    Expert Talk
+                    <a href="http://confengine.com/agile-pune-2014/proposal/521/architectural-hiccups-and-you-really-shouldnt-bother-with-sprint-0" target="_blank">Architectural hiccups (and you really shouldn't bother with sprint-0)</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/397/enterprise-agile-adoption-an-organizational-change-management-journey" target="_blank">Enterprise Agile Adoption: An Organizational Change Management Journey</a>
@@ -331,11 +333,10 @@
             <tr>
                 <td>10:30-11:15 AM</td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/458/techniques-to-speed-up-your-build-pipeline-for-faster-feedback" target="_blank">Techniques to Speed Up your Build Pipeline for Faster Feedback</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/ashish-parkhi" target="_blank">Ashish Parkhi</a>
-                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/720/taming-the-dragon" target="_blank">Taming the Dragon</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/karthik-kamal-balasubramaniam" target="_blank">Karthik Kamal Balasubramaniam</a>
                 </td>
-                <td>Demo Session 2</td>
+                <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>Workshop by Julian Harty</td>
             </tr>
             <tr>
@@ -345,13 +346,11 @@
             <tr>
                 <td>11:30-12:15 PM</td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/521/architectural-hiccups-and-you-really-shouldnt-bother-with-sprint-0" target="_blank">Architectural hiccups (and you really shouldn't bother with sprint-0)</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/458/techniques-to-speed-up-your-build-pipeline-for-faster-feedback" target="_blank">Techniques to Speed Up your Build Pipeline for Faster Feedback</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/ashish-parkhi" target="_blank">Ashish Parkhi</a>
+                    <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
                 </td>
-                <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/720/taming-the-dragon" target="_blank">Taming the Dragon</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/karthik-kamal-balasubramaniam" target="_blank">Karthik Kamal Balasubramaniam</a>
-                </td>
+                <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>Workshop by Julian Harty...</td>
             </tr>
             <tr>
@@ -360,11 +359,11 @@
             </tr>
             <tr>
                 <td>01:30-02:15 PM</td>
-                <td>Expert Talk 8</td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/403/application-security-the-agile-way" target="_blank">Application Security - The Agile Way</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/shirish-padalkar" target="_blank">Shirish Padalkar</a>
                 </td>
+                <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>Workshop by Joshua Kerievsky</td>
             </tr>
             <tr>
@@ -373,12 +372,12 @@
             </tr>
             <tr>
                 <td>02:30-03:15 PM</td>
-                <td>Expert Talk 9</td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/535/extreme-programming-for-etl-and-data-analytics" target="_blank">eXtreme Programming for ETL and Data Analytics</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/prafulla-girgaonkar-2" target="_blank">Prafulla Girgaonkar</a>
                     <br><a href="http://nareshjain.com/about" target="_blank" style="font-size: 0.75em">Naresh Jain</a>
                 </td>
+                <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>Workshop by Joshua Kerievsky...</td>
             </tr>
             <tr>
@@ -387,8 +386,8 @@
             </tr>
             <tr>
                 <td>03:30-04:15 PM</td>
-                <td>Expert Talk 10</td>
                 <td>Experience Report 7 &amp; 8</td>
+                <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>Lightning Talks</td>
             </tr>
             <tr>
