added Senthilkumar Rajamarthandan's name

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/685/applying-gamification-techniques-in-agile" target="_blank">Applying Gamification Techniques in Agile</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/archana-joshi" target="_blank">Archana Joshi</a>
-                    <br><a href="http://confengine.com/user/senthilkumar-rajamarthandan" target="_blank" style="font-size: 0.75em">Senthilkumar R</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/senthilkumar-rajamarthandan" target="_blank">Senthilkumar R</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/695/the-power-of-retrospection" target="_blank">The Power of Retrospection</a>
