updated the last -1 schedule

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <a href="http://confengine.com/agile-pune-2014/proposal/483/to-deploy-or-not-to-deploy-decide-using-ttas-trend-failure-analysis" target="_blank">To Deploy or Not-to-Deploy - decide using TTA's Trend & Failure Analysis</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/anand-bagmar" target="_blank">Anand Bagmar</a>
                 </td>
-                <td>Experience Report 1 &amp; 2</td>
+                <td>Lightning Talks</td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/dhaval-dalal" target="_blank">Dhaval Dalal</a>
@@ -264,8 +264,11 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/397/enterprise-agile-adoption-an-organizational-change-management-journey" target="_blank">Enterprise Agile Adoption: An Organizational Change Management Journey</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/zaheerabbas-contractor" target="_blank">Zaheerabbas Contractor</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/525/promiscuous-pairing-yes-it-works-" target="_blank">Promiscuous Pairing - Yes it works !!!</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/ankur-sambhar" target="_blank">Ankur Sambhar</a>
+                    <hr>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/723/research-paper-on-what-happens-to-engineering-manager-in-agile-world" target="_blank">Research paper on 'What happens to Engineering Manager in Agile world'</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/naveen-indusekhar" target="_blank">Naveen Indusekhar</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation...</a>
@@ -291,7 +294,10 @@
                     <a href="http://confengine.com/agile-pune-2014/proposal/402/continuous-delivery-in-enterprise-devops-and-other-challenges" target="_blank">Continuous delivery in enterprise - devOps and other challenges</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/anirudh-bhatnagar-1" target="_blank">Anirudh Bhatnagar</a>
                 </td>
-                <td>Lightning Talks</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/730/the-lean-machine" target="_blank">The Lean Machine</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/sneha-kadam" target="_blank">Sneha Kadam</a>
+                </td>
             </tr>
             <tr>
                 <td>04:15-04:30 PM</td>
@@ -386,9 +392,18 @@
             </tr>
             <tr>
                 <td>03:30-04:15 PM</td>
-                <td>Experience Report 7 &amp; 8</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/397/enterprise-agile-adoption-an-organizational-change-management-journey" target="_blank">Enterprise Agile Adoption: An Organizational Change Management Journey</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/zaheerabbas-contractor" target="_blank">Zaheerabbas Contractor</a>
+                </td>
                 <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
-                <td>Lightning Talks</td>
+                <td>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/652/scrumban-recipe-a-pinch-of-this-a-handful-of-that" target="_blank">ScrumBan Recipe – A pinch of this, a handful of that</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/vinaya-muralidharan" target="_blank">Vinaya Muralidharan</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/sutap" target="_blank">Sutap</a>
+                    <hr>
+                    Lightning Talks
+                </td>
             </tr>
             <tr>
                 <td>04:15-04:30 PM</td>
