updated the final schedule

--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
             </tr>
             <tr>
                 <td>09:00-10:00 AM</td>
-                <td colspan="3">Keynote by Joshua Kerievsky</td>
+                <td colspan="3">
+                    <b><a href="http://www.industriallogic.com/blog/anzeneering/" target="_blank">Anzeneering</a> – a Journey to Humility, Safety and Excellence</b>
+                    <br>Keynote by Joshua Kerievsky
+                </td>
             </tr>
             <tr>
                 <td>10:00-10:15 AM</td>
@@ -402,7 +405,8 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/vinaya-muralidharan" target="_blank">Vinaya Muralidharan</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/sutap" target="_blank">Sutap</a>
                     <hr>
-                    Lightning Talks
+                    <a href="http://confengine.com/agile-pune-2014/proposal/717/does-your-design-smell" target="_blank">Does your Design Smell?</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/tushar-sharma" target="_blank">Tushar Sharma</a>
                 </td>
             </tr>
             <tr>
