--- a/index.html
+++ b/index.html
@@ -267,11 +267,12 @@
                     <br><a class="speaker-name" href="http://confengine.com/user/srinivas-chillara" target="_blank">Srinivas Chillara</a>
                 </td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/525/promiscuous-pairing-yes-it-works-" target="_blank">Promiscuous Pairing - Yes it works !!!</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/ankur-sambhar" target="_blank">Ankur Sambhar</a>
-                    <hr>
                     <a href="http://confengine.com/agile-pune-2014/proposal/723/research-paper-on-what-happens-to-engineering-manager-in-agile-world" target="_blank">Research paper on 'What happens to Engineering Manager in Agile world'</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/naveen-indusekhar" target="_blank">Naveen Indusekhar</a>
+                    <hr>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/652/scrumban-recipe-a-pinch-of-this-a-handful-of-that" target="_blank">ScrumBan Recipe – A pinch of this, a handful of that</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/vinaya-muralidharan" target="_blank">Vinaya Muralidharan</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/sutap" target="_blank">Sutap</a>
                 </td>
                 <td>
                     <a href="http://confengine.com/agile-pune-2014/proposal/534/the-tao-of-transformation" target="_blank">The Tao of Transformation...</a>
@@ -329,7 +330,10 @@
 
             <tr>
                 <td>09:00-10:00 AM</td>
-                <td colspan="3">Keynote - <a href="http://confengine.com/agile-pune-2014/proposal/694/science-or-stories" target="_blank">Science or Stories?</a> by Linda Rising</td>
+                <td colspan="3">
+                    <b><a href="http://confengine.com/agile-pune-2014/proposal/694/science-or-stories" target="_blank">Science or Stories?</a></b>
+                    <br/>Keynote by Linda Rising
+                </td>
             </tr>
             <tr>
                 <td>10:00-10:10 AM</td>
@@ -401,9 +405,8 @@
                 </td>
                 <td><a class="speaker-name" href="http://booking.agilefaqs.com/agile-coach-camp-bangalore-2013" target="_blank">Agile Coach Camp - Open Space Conference</a></td>
                 <td>
-                    <a href="http://confengine.com/agile-pune-2014/proposal/652/scrumban-recipe-a-pinch-of-this-a-handful-of-that" target="_blank">ScrumBan Recipe – A pinch of this, a handful of that</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/vinaya-muralidharan" target="_blank">Vinaya Muralidharan</a>
-                    <br><a class="speaker-name" href="http://confengine.com/user/sutap" target="_blank">Sutap</a>
+                    <a href="http://confengine.com/agile-pune-2014/proposal/525/promiscuous-pairing-yes-it-works-" target="_blank">Promiscuous Pairing - Yes it works !!!</a>
+                    <br><a class="speaker-name" href="http://confengine.com/user/ankur-sambhar" target="_blank">Ankur Sambhar</a>
                     <hr>
                     <a href="http://confengine.com/agile-pune-2014/proposal/717/does-your-design-smell" target="_blank">Does your Design Smell?</a>
                     <br><a class="speaker-name" href="http://confengine.com/user/tushar-sharma" target="_blank">Tushar Sharma</a>
