added Josh's keynote

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <tr>
                 <td>09:00-10:00 AM</td>
                 <td colspan="3">
-                    <b><a href="http://www.industriallogic.com/blog/anzeneering/" target="_blank">Anzeneering</a> – a Journey to Humility, Safety and Excellence</b>
-                    <br>Keynote by Joshua Kerievsky
+                    <b><a href="http://confengine.com/agile-pune-2014/proposal/757/anzeneering" target="_blank">Anzeneering</a> – a Journey to Humility, Safety and Excellence</b>
+                    <br>Keynote by <a class="speaker-name" href="http://confengine.com/user/joshua-kerievsky" target="_blank">Joshua Kerievsky</a>
                 </td>
             </tr>
             <tr>
@@ -332,7 +332,7 @@
                 <td>09:00-10:00 AM</td>
                 <td colspan="3">
                     <b><a href="http://confengine.com/agile-pune-2014/proposal/694/science-or-stories" target="_blank">Science or Stories?</a></b>
-                    <br/>Keynote by Linda Rising
+                    <br/>Keynote by <a class="speaker-name" href="http://confengine.com/user/linda-rising" target="_blank">Linda Rising</a>
                 </td>
             </tr>
             <tr>
