adjusted the dates.

--- a/index.html
+++ b/index.html
@@ -457,13 +457,13 @@
                     <td>25</td>
                     <td>3,500 Rs.</td>
                 </tr>
-                <tr>
+                <tr style="text-decoration: line-through">
                     <td>2. Early Bird</td>
                     <td>July 15th</td>
                     <td>50</td>
                     <td>5,000 Rs.</td>
                 </tr>
-                <tr>
+                <tr style="text-decoration: line-through">
                     <td>3. Smart</td>
                     <td>Oct 1st</td>
                     <td>100</td>
