added pune open coffee club logo

--- a/index.html
+++ b/index.html
@@ -594,12 +594,16 @@
                         <a href="http://www.softexpune.org/" target="_blank">
                             <img src="images/sponsors/seap_logo.png" alt="SEAP" title="SEAP"/>
                         </a>
+                        <br/><br/><br/><br/>
+                        <a href="http://punetech.com/" target="_blank">
+                            <img src="images/sponsors/pune_tech.png" alt="Pune Tech" title="Pune Tech"/>
+                        </a>
                     </article>
                 </div>
                 <div class="6u">
                     <article>
-                        <a href="http://punetech.com/" target="_blank">
-                            <img src="images/sponsors/pune_tech.png" alt="Pune Tech" title="Pune Tech"/>
+                        <a href="http://punestartups.org/" target="_blank">
+                            <img src="images/sponsors/pocc.png" alt="Pune Open Coffee Club" title="Pune Open Coffee Club"/>
                         </a>
                     </article>
                 </div>
